# studyTimer

./: #CMakeLists.txt#  CMakeLists.txt  README.md
resources/: me@Xubuntu.2935:1488685838  studyTimerGUI.c  studyTimerGUI.c~  studyTimerGUI.h
src/: studyTimer.c
